# untis-planner

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  cli.py  docker-compose.yml  fullcalendar.js  fullcalendar.py  main.py  pylintrc  pyproject.toml  requirements.txt  untisplaner.py  untisplanner.py  webuntis-config.ini
.github/workflows/: docker-publish.yml
