[project]
name = "untis-planer"
version = "0.1.0"
description = "Simple appointment planer using timetables from a WebUntis server."
authors = [
    {name = "Christian Wichmann", email = "wichmann@bbs-os-brinkstr.de"},
]
dependencies = ["webuntis-cli>=0.6.6", "rich>=14.1.0", "pylint>=3.3.8"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
